@@ -101,6 +101,10 @@ public class JvstTest4 extends JvstTestRoot {
 
         assertTrue(cc.hasAnnotation(test4.Anno1.class));
         assertFalse(cc.hasAnnotation(java.lang.annotation.Documented.class));
+        
+        assertTrue(cc.hasAnnotation(test4.Anno1.class.getName()));
+        assertFalse(cc.hasAnnotation(java.lang.annotation.Documented.class.getName()));
+        
         assertEquals("empty", ((test4.Anno1)cc.getAnnotation(test4.Anno1.class)).value());
         assertNull(cc.getAnnotation(Deprecated.class));
 
@@ -602,14 +606,14 @@ public class JvstTest4 extends JvstTestRoot {
         pool.makePackage(pool.getClassLoader(), packageName);
         CtClass ctcl = pool.makeClass("test4.pack.Clazz");
         Class cl = ctcl.toClass();
-        Object obj = cl.newInstance();
+        Object obj = cl.getConstructor().newInstance();
         assertEquals(packageName, obj.getClass().getPackage().getName());
     }
 
-    public static final String BASE_PATH="../";
-    public static final String JAVASSIST_JAR=BASE_PATH+"javassist.jar";
-    public static final String CLASSES_FOLDER=BASE_PATH+"build/classes";
-    public static final String TEST_CLASSES_FOLDER=BASE_PATH+"build/test-classes";
+    public static final String BASE_PATH = "../";
+    public static final String JAVASSIST_JAR = BASE_PATH + "javassist.jar";
+    public static final String CLASSES_FOLDER = BASE_PATH + "build/classes";
+    public static final String TEST_CLASSES_FOLDER = BASE_PATH + "build/test-classes";
 
     public static class Inner1 {
         public static int get() {
@@ -661,9 +665,9 @@ public class JvstTest4 extends JvstTestRoot {
         long t2 = endTime2 - endTime;
         long t3 = endTime3 - endTime2;
         System.out.println("JIRA150: " + t1 + ", " + t2 + ", " + t3);
-        assertTrue("performance test (the next try may succeed): " + t1 + "/ 5 < " + t2,
-                   t2 < t1 * 5);
-        assertTrue("", t3 < t1 * 3);
+        assertTrue("performance test (the next try may succeed): " + t2 + " < 6 * " + t1,
+                   t2 < t1 * 6);
+        assertTrue(t3 + " < 3 * " + t1, t3 < t1 * 3);
     }
 
     public void testJIRA150b() throws Exception {
@@ -691,15 +695,17 @@ public class JvstTest4 extends JvstTestRoot {
         }
 
         // try to run garbage collection.
+        int[][] mem = new int[100][];
         int[] large;
         for (int i = 0; i < 100; i++) {
             large = new int[1000000];
-            large[large.length - 2] = 9;
+            large[large.length - 2] = 9 + i;
+            mem[i] = large;
         }
         System.gc();
         System.gc();
         int size = javassist.compiler.MemberResolver.getInvalidMapSize();
-        System.out.println("JIRA150b " + size);
+        System.out.println("JIRA150b " + size + " " + mem[mem.length - 1][mem[0].length - 2]);
         assertTrue("JIRA150b size: " + origSize + " " + size, size < origSize + N);
     }
 
@@ -866,10 +872,17 @@ public class JvstTest4 extends JvstTestRoot {
         CtClass cc = sloader.get("test4.JIRA181");
         CtField field = cc.getField("aField");
         String s = field.getAnnotation(test4.JIRA181.Condition.class).toString();
-        assertEquals("@test4.JIRA181$Condition(condition=test4.JIRA181<T>.B.class)", s);
+        if (ClassFile.MAJOR_VERSION < ClassFile.JAVA_9)
+            assertEquals("@test4.JIRA181$Condition(condition=test4.JIRA181<T>.B.class)", s);
+        else
+            assertEquals("@test4.JIRA181$Condition(condition=test4.JIRA181.B.class)", s);
+
         CtField field2 = cc.getField("aField2");
         String s2 = field2.getAnnotation(test4.JIRA181.Condition2.class).toString();
-        assertEquals("@test4.JIRA181$Condition2(condition=test4.JIRA181<T>.B[].class)", s2);
+        if (ClassFile.MAJOR_VERSION < ClassFile.JAVA_9)
+            assertEquals("@test4.JIRA181$Condition2(condition=test4.JIRA181<T>.B[].class)", s2);
+        else
+            assertEquals("@test4.JIRA181$Condition2(condition=test4.JIRA181.B[].class)", s2);
     }
 
     public void testJIRA195() throws Exception {
@@ -1016,7 +1029,7 @@ public class JvstTest4 extends JvstTestRoot {
 
         newClass.debugWriteFile();
         Class<?> cClass = newClass.toClass();
-        Object o = cClass.newInstance();
+        Object o = cClass.getConstructor().newInstance();
         java.lang.reflect.Method m = cClass.getMethod("evaluate");
         m.invoke(o);
         m = cClass.getMethod("evaluate2");
