@@ -35,7 +35,7 @@ public class ProxySimpleTest extends TestCase {
                 return proceed.invoke(self, args);  // execute the original method.
             }
         };
-        Foo foo = (Foo)c.newInstance();
+        Foo foo = (Foo)c.getConstructor().newInstance();
         ((Proxy)foo).setHandler(mi);
         testResult = "";
         foo.foo(1);
@@ -60,7 +60,7 @@ public class ProxySimpleTest extends TestCase {
         };
         ProxyFactory pf = new ProxyFactory();
         pf.setSuperclass(ReadWriteData.class);
-        Object data = pf.createClass().newInstance();
+        Object data = pf.createClass().getConstructor().newInstance();
         // Object data = new ReadWriteData();
         ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(fileName));
         oos.writeObject(data);
@@ -81,12 +81,12 @@ public class ProxySimpleTest extends TestCase {
     public void testWriteReplace() throws Exception {
         ProxyFactory pf = new ProxyFactory();
         pf.setSuperclass(WriteReplace.class);
-        Object data = pf.createClass().newInstance();
+        Object data = pf.createClass().getConstructor().newInstance();
         assertEquals(data, ((WriteReplace)data).writeReplace());
 
         ProxyFactory pf2 = new ProxyFactory();
         pf2.setSuperclass(WriteReplace2.class);
-        Object data2 = pf2.createClass().newInstance();
+        Object data2 = pf2.createClass().getConstructor().newInstance();
         Method meth = data2.getClass().getDeclaredMethod("writeReplace", new Class[0]);
         assertEquals("javassist.util.proxy.SerializedProxy",
                     meth.invoke(data2, new Object[0]).getClass().getName());
@@ -97,6 +97,106 @@ public class ProxySimpleTest extends TestCase {
     }
 
     public static class WriteReplace2 implements Serializable {
-        public Object writeReplace(int i) { return new Integer(i); }
+        public Object writeReplace(int i) { return Integer.valueOf(i); }
+    }
+
+    String value244;
+
+    public void testJIRA244() throws Exception {
+        ProxyFactory factory = new ProxyFactory();
+        factory.setSuperclass(Extended244.class);
+        Extended244 e = (Extended244)factory.create(null, null, new MethodHandler() {
+            @Override
+            public Object invoke(Object self, Method thisMethod,
+                    Method proceed, Object[] args) throws Throwable {
+                value244 += thisMethod.getDeclaringClass().getName();
+                return proceed.invoke(self);
+            }
+        });
+
+        value244 = "";
+        assertEquals("base", e.base());
+        System.out.println(value244);
+        assertEquals(Extended244.class.getName(), value244);
+
+        value244 = "";
+        assertEquals("ext", e.extended());
+        System.out.println(value244);
+        assertEquals(Extended244.class.getName(), value244);
+
+        value244 = "";
+        assertEquals("base2ext2", e.base2());
+        System.out.println(value244);
+        assertEquals(Extended244.class.getName(), value244);
+    }
+
+    // if Base244 is private, then Extended244 has a bridge method for base().
+    private static abstract class Base244 {
+        public String base() { return "base"; }
+        public String base2() { return "base2"; }
+    }
+
+    public static class Extended244 extends Base244 {
+        public String extended() { return "ext"; }
+        public String base2() { return super.base2() + "ext2"; }
+    }
+
+    String valueDefaultMethods = "";
+
+    public void testDefaultMethods() throws Exception {
+        valueDefaultMethods = "";
+        ProxyFactory f = new ProxyFactory();
+        f.writeDirectory = "./proxy";
+        f.setSuperclass(Default3.class);
+        Class c = f.createClass();
+        MethodHandler mi = new MethodHandler() {
+            public Object invoke(Object self, Method m, Method proceed,
+                                 Object[] args) throws Throwable {
+                valueDefaultMethods += "1";
+                return proceed.invoke(self, args);  // execute the original method.
+            }
+        };
+        Default3 foo = (Default3)c.getConstructor().newInstance();
+        ((Proxy)foo).setHandler(mi);
+        foo.foo();
+        foo.bar();
+        assertEquals("11", valueDefaultMethods);   
+    }
+
+    public void testDefaultMethods2() throws Exception {
+        valueDefaultMethods = "";
+        ProxyFactory f = new ProxyFactory();
+        f.writeDirectory = "./proxy";
+        f.setInterfaces(new Class[] { Default2.class });
+        Class c = f.createClass();
+        MethodHandler mi = new MethodHandler() {
+            public Object invoke(Object self, Method m, Method proceed,
+                                 Object[] args) throws Throwable {
+                valueDefaultMethods += "1";
+                return proceed.invoke(self, args);  // execute the original method.
+            }
+        };
+        Default2 foo = (Default2)c.getConstructor().newInstance();
+        ((Proxy)foo).setHandler(mi);
+        foo.foo();
+        foo.bar();
+        assertEquals("11", valueDefaultMethods);
+    }
+
+    public static interface Default1 {
+        default int foo() { return 0; }
+        default int baz() { return 2; }
+    }
+
+    public static interface Default2 extends Default1 {
+        default int bar() { return 1; }
+    }
+
+    public static class Default3 implements Default2 {
+        public int foo() { return Default2.super.foo(); }
+    }
+
+    public static class Default4 extends Default3 {
+        public int baz() { return super.baz(); }
     }
 }
